[package]
name = "teleparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
either = "1.9.0"
emojis = "0.6.1"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
unicode-segmentation = "1.10.1"
[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = "0.5.4"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"

[profile.release]
codegen-units = 1
lto = "fat"
